fix(Home): hide categories on mobile

--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -6,11 +6,15 @@
   grid-template-columns: 1fr auto;
 
   &__categories {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
-    gap: 2rem;
+    display: none;
 
-    margin: 1.2rem 0rem 2.4rem 0rem;
+    @include breakpoint-to('sm') {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, minmax(20rem, 1fr));
+      gap: 2rem;
+
+      margin: 1.2rem 0rem 2.4rem 0rem;
+    }
   }
 
   &__content {
